hard-gists/3023497/run.log
=== Docker Run Log for 3023497 ===
Started at: Mi 29. Okt 13:37:17 CET 2025

[2025-10-29 13:37:18] START: Running container for 3023497
[2025-10-29 13:37:18] SUCCESS: Container b8cea55d8e848ba80c5a3ba03e377a8d0e641d21b9b8ace743cfd0c03ad111b1 started for 3023497
=== Container logs for 3023497 ===
  File "/snippet.py", line 43
    print p
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3023497 ===
[2025-10-29 13:37:20] INFO: Container b8cea55d8e848ba80c5a3ba03e377a8d0e641d21b9b8ace743cfd0c03ad111b1 has stopped
